# Mental-Health-Prediction-GenAI

./: .gitignore  README.md  justfile  pyproject.toml
data/: depression_data_sample.csv
reports/: depression_data_profile.html
src/mental_health_ml/: config.yml  data_ingest.py  data_preprocess.py  train_pipeline.py  utils.py
